tests/neg/i11781.scala

trait A:
  type Foo
  new Foo  // error: does not have a constructor
